# server/openapi/openapi.yaml
@@ -544,6 +544,64 @@ paths:
       tags:
         - Events
       x-openapi-router-controller: server.controllers.events
+  /events/{event_id}/roles:
+    get:
+      operationId: get_event_roles
+      parameters:
+        - description: Unique ID of the event to retrieve
+          explode: false
+          in: path
+          name: event_id
+          required: true
+          schema:
+            type: string
+          style: simple
+        - in: query
+          name: enriched
+          schema:
+            type: boolean
+          required: false
+        - in: query
+          name: logged_in_customer_id
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: shop
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: path_prefix
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: timestamp
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: signature
+          schema:
+            type: string
+          required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: "#/components/schemas/Role"
+                type: array
+          description: Collection of roles for event
+        "404":
+          description: Event not found
+      summary: Get a single event by ID
+      tags:
+        - Event
+        - Role
+      x-openapi-router-controller: server.controllers.events
 
   /looks:
     post:
@@ -898,53 +956,6 @@ paths:
         "200":
           description: Single role by id
       summary: Get single role by id
-      tags:
-        - Roles
-      x-openapi-router-controller: server.controllers.roles
-  /roles_with_eventid:
-    get:
-      operationId: get_event_roles
-      parameters:
-        - description: Retrieve roles of event
-          explode: true
-          in: query
-          name: event_id
-          required: true
-          schema:
-            format: str
-            type: string
-          style: form
-        - in: query
-          name: logged_in_customer_id
-          schema:
-            type: string
-          required: true
-        - in: query
-          name: shop
-          schema:
-            type: string
-          required: true
-        - in: query
-          name: path_prefix
-          schema:
-            type: string
-          required: true
-        - in: query
-          name: timestamp
-          schema:
-            type: string
-          required: true
-        - in: query
-          name: signature
-          schema:
-            type: string
-          required: true
-      responses:
-        "200":
-          description: Details of the Role
-        "404":
-          description: Role not found
-      summary: Get a single role by name
       tags:
         - Roles
       x-openapi-router-controller: server.controllers.roles
