# server/services/event.py
@@ -64,6 +64,14 @@ class EventService:
 
         return event
 
+    def get_roles_for_event(self, event_id):
+        event = Event.query.filter_by(id=event_id).first()
+
+        if not event:
+            raise NotFoundError("Event not found.")
+
+        return Role.query.filter_by(event_id=event_id).all()
+
     def create_event(self, event_data):
         user = User.query.filter_by(id=event_data["user_id"]).first()
 
